# relay-slack-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  RELAY_PRD.md  SIGNAL_PRD.md  alembic.ini  docker-compose.yml  prd.json  progress.txt  pyproject.toml  railway.toml  slack-app-manifest.yaml
alembic/: env.py
classifier/: __init__.py  classify.py  evaluate.py  label.py
docs/: CLAUDE_OPERATING_BRIEF.md  CODEBASE_REVIEW_2026-06-30.md  DEMO_SCRIPT.md  HANDOFF.md  PLAN_1_FOUNDATION.md  PLAN_9_PRIVATE_BETA_LAUNCH.md  architecture.md  beta-user-guide.md
memory/: glossary.md
relay/: __init__.py  auth.py  config.py  crypto.py
scripts/: beta_preflight.py  configure-manifest.sh  entrypoint.sh  reencrypt_workspace_tokens_kms.py  seed_reviewer_sandbox.py  smoke_kms.py  start-local.sh  start_web.sh  start_worker.sh  verify_deployment.sh
tasks/: STATUS.md  prd-plan4-source-connectors.md  prd-plan5-drafting-approval.md  prd-plan6-feedback-memory.md  prd-plan7-marketplace-readiness.md
tests/: conftest.py  test_api.py  test_ask_command.py  test_auth.py  test_beta_preflight.py  test_beta_smoke.py  test_channel.py  test_chunking.py  test_commands.py  test_config.py  test_configure_manifest_script.py  test_connector_purge.py  test_connector_registry.py  test_connector_tasks.py  test_context_mcp_server.py  test_context_service.py  test_crypto.py  test_crypto_kms.py  test_delete_command.py  test_delete_workspace.py  test_deletion_tasks.py  test_draft_modal.py  test_drafting_evidence.py  test_drafting_tasks.py  test_embeddings.py  test_home.py  (+32 more)
(+84 files in other folders)
