[project]
name = "relay"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "slack-bolt[async]>=1.21",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "cryptography>=43",
    "anthropic>=0.40",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "aiohttp>=3.12",
    "python-dotenv>=1.0",
    # Plan 4 — source connectors + embedding pipeline
    "tiktoken>=0.7",
    "voyageai>=0.3",
    "openai>=1.30",
    "PyGithub>=2.3",
    "google-api-python-client>=2.130",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
